--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node src/index.js"
   },
+  "engines" :{ 
+    "npm": ">=8.0.0 <9.6.4", 
+    "node": ">=16.0.0 <17.0.0"},
   "keywords": [],
   "author": "",
   "license": "ISC",
